# esp32_si4721_tx

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old  settings_example.txt
main/: CMakeLists.txt  audio_data.h  config.h  config_manager.c  config_manager.h  i2s_audio.c  i2s_audio.h  main.c  sd_logger.c  sd_logger.h  sd_player.c  sd_player.h  si4721.c  si4721.h  uart_cmd.c  uart_cmd.h
